Tab Menu alignment fixed & inactive shadowed

--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
@@ -1160,25 +1160,13 @@ span[class*="sheet-tab-page"] {
 	border-left: 1px solid #b8b8b8;
 	border-right: 1px solid #b8b8b8;
 	border-bottom: 1px solid #b8b8b8;
+	background-color: rgba(128,128,128,0.12);
 	text-shadow:none;
 	width: 56px;
 	height: 28px;
 }
-
-input[class*="sheet-tab-page"]:focus,
-span[class*="sheet-tab-page"]:focus {
-	border-top: 1px solid var(--bdc);
-	border-left: 1px solid var(--bdc);
-	border-right: 1px solid var(--bdc);
-	border-bottom: 0px solid var(--bdc);
-	text-shadow:none;
-}
-
-
 span[class*="sheet-tab-page"] {
-	background-color: transparent;
 	margin-left: -82px;	
-	background-image: var(--bgi);
 }
 
 input.sheet-tab-page-core,
@@ -1214,7 +1202,7 @@ span.sheet-tab-page-armor {
 	width: 68px;
 }
 span.sheet-tab-page-armor {
-	margin-left: -75px;
+	margin-left: -74px;
 }
 input.sheet-tab-page-spellbook,
 span.sheet-tab-page-spellbook {
@@ -1228,28 +1216,28 @@ span.sheet-tab-page-inventory {
 	width: 90px;
 }
 span.sheet-tab-page-inventory {
-	margin-left: -97px;
+	margin-left: -96px;
 }
 input.sheet-tab-page-background,
 span.sheet-tab-page-background {
 	width: 103px;
 }
 span.sheet-tab-page-background {
-	margin-left: -109px;
+	margin-left: -110px;
 }
 input.sheet-tab-page-xp,
 span.sheet-tab-page-xp {
 	width: 40px;
 }
 span.sheet-tab-page-xp {
-	margin-left: -47px;
+	margin-left: -46px;
 }
 input.sheet-tab-page-npc,
 span.sheet-tab-page-npc {
 	width: 51px;
 }
 span.sheet-tab-page-npc {
-	margin-left: -57px;
+	margin-left: -58px;
 }
 input.sheet-tab-page-settings,
 span.sheet-tab-page-settings {
@@ -1284,6 +1272,7 @@ input.sheet-tab-page98:checked + span.sheet-tab-page98,
 input.sheet-tab-page99:checked + span.sheet-tab-page99 {
 	border-bottom: 0px solid var(--bdc);
 	background-image: linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,0));
+	background-color: transparent;
 }
 
 /* END Main sheet tabs */
